# Muhle-Intelligence

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  GAME_RULES.md  README.md  game_rules.md  protocol.md
engine/: protocol.md
engine/include/: muhle_intelligence.h
engine/muhle_intelligence/: Cargo.toml
engine/muhle_intelligence/src/: bin.rs  commands.rs  engine.rs  evaluation.rs  game.rs  lib.rs  main.rs  main_loop.rs  messages.rs  move_generation.rs  search.rs  various.rs
engine/tests/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt
gui/common/: CMakeLists.txt
gui/common/include/common/: board.hpp  game.hpp  subprocess.hpp
gui/common/src/: board.cpp  game.cpp  subprocess.cpp
gui/gui_base/: CMakeLists.txt
gui/gui_base/include/: font.hpp  gui_base.hpp
gui/gui_base/include/gui_base/: font.hpp
gui/gui_base/src/: font.cpp  gui_base.cpp
gui/muhle_player/: CMakeLists.txt
gui/muhle_player/src/: main.cpp  muhle_player.cpp  muhle_player.hpp
gui/muhle_tester/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  muhle_tester.cpp  muhle_tester.hpp
gui/muhle_tester/src/: game.cpp  game.hpp  muhle_tester.cpp  muhle_tester.hpp
gui/muhle_tester/src/modes/: common.cpp  common.hpp  play.cpp  play.hpp  test.cpp  test.hpp
include/: muhle_intelligence.h
muhle_intelligence/: .gitignore  Cargo.toml
muhle_intelligence/src/: bin.rs  commands.rs  engine.rs  evaluation.rs  game.rs  lib.rs  main.rs  messages.rs  move_generation.rs  options.rs  search.rs  think.rs  time.rs
muhle_intelligence_core/: Cargo.toml
muhle_intelligence_core/src/: commands.rs  engine.rs  game.rs  lib.rs  move_generation.rs  search.rs  various.rs
scripts/: build.sh  muhle_player.sh  muhle_tester.sh  run_tester.sh  setup.bat  setup.sh  setup_optimized.bat  setup_optimized.sh  speed_test.sh  tests.sh  unit_tests.sh
src/: commands.rs  engine.rs  evaluation.rs  game.rs  main.rs  messages.rs  options.rs  think.rs  time.rs
tests/: CMakeLists.txt  main.cpp
tests/cmake/: googletest.cmake
tests/test_library/: CMakeLists.txt  helpers.cpp  helpers.hpp  main.cpp
tests/test_move_generation_speed/: CMakeLists.txt  main.cpp
